<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.projeto.danilosetubal.precojustoapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameProduct"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeNameProduct"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:id="@+id/editNomeProduto"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valueProduct"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typevalueProduct"
        android:inputType="numberDecimal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:id="@+id/editValorProduto"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qtdParc"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/juros"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="19dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:hint="@string/qtdParc"
            android:inputType="numberDecimal"
            android:id="@+id/editQtdPar"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="0"
            android:inputType="numberDecimal"
            android:id="@+id/editJuros"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:drawableLeft="@android:drawable/ic_dialog_info"
            android:onClick="calcular"
            android:text="@string/btnCalculate" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:drawableLeft="@android:drawable/ic_notification_clear_all"
            android:onClick="limparDados"
            android:text="@string/btnClear" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNomeProduto"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvValorInicial"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvValorParcela"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvValorTotal"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotalJuros"
        android:layout_marginLeft="30dp"
        />


</LinearLayout>